--- a/task12webserver/html/index.html
+++ b/task12webserver/html/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Admin</title>
+    <title>index</title>
 </head>
 <body>
-    <a href="admin">Admin</a>
+    <a href="/user_list">user_list</a>
 </body>
 </html>
