--- a/task14war/src/main/java/ru/otus/hw14war/html/index.html
+++ b/task14war/src/main/java/ru/otus/hw14war/html/index.html
@@ -5,6 +5,6 @@
     <title>index</title>
 </head>
 <body>
-    <a href="/user_list">user_list</a>
+    <a href="user_list">user_list</a>
 </body>
 </html>
