--- a/task15messagesystem/public_html/user.html
+++ b/task15messagesystem/public_html/user.html
@@ -5,11 +5,13 @@
     <title>user</title>
 </head>
 <body>
+
 <!--
 <form name="message" action="">
     <input name="usermsg" type="text" id="message" size="63"/>
     <input type="button" name="submitmsg" value="Send..." onclick="sendMessage();"/>
-</form>-->
+</form>
+-->
 
 <form name="newUser" action="">
     <p>id: <input type="hidden" name="id"  value = ${user.id}></p>
