--- a/task15messagesystem/public_html/index.html
+++ b/task15messagesystem/public_html/index.html
@@ -19,6 +19,7 @@
     <p id="user_count">Count row = 0</p>
 
 <br><br>
+    <input type="button" name="newUser" value="newUser" onclick="clearField();"/>
     <form name="newUser">
         <p>id: <input type="hidden" id="id"  value = 0></p>
         <p>Name: <input type="text" id="name"  value = ""></p>
